# hic_qc

./: .gitignore  .travis.yml  Readme.md  env.minimal.yml  env.yml  hic_qc.py  pyproject.toml
hic_qc/: __init__.py  hic_qc.py
